--- a/src/app/components/commits/commits.component.html
+++ b/src/app/components/commits/commits.component.html
@@ -4,7 +4,7 @@
 
 <mat-list>
   <mat-list-item *ngFor="let commit of commits">
-    <img [src]="avatarUrl" matListIcon mat-card-avatar class="commit-avatar">
+    <img [src]="avatarUrl" mat-card-avatar matListAvatar class="commit-avatar">
     <mat-card-subtitle mat-line>{{commit.repo}}</mat-card-subtitle>
     <mat-card-subtitle mat-line>{{commit.createdBy}}</mat-card-subtitle>
     <mat-card-subtitle mat-line>{{commit.createdAt | date }}</mat-card-subtitle>
